--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@loaders.gl/core": "^3.2.4",
+    "@loaders.gl/json": "^3.2.4",
     "deck.gl": "^8.7.8",
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^2.1.9",
